prevent horizontal scrollbar

--- a/media/styles/lyricsStyle.css
+++ b/media/styles/lyricsStyle.css
@@ -19,6 +19,10 @@
     font-weight: 200;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     background-color: #303030;
     transition: opacity 0.3s ease;
