--- a/media/styles/signInStyle.css
+++ b/media/styles/signInStyle.css
@@ -15,6 +15,10 @@
     box-sizing: border-box;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     margin: 0;
     background: #121212;
